--- a/.github/workflows/actions-demo.yml
+++ b/.github/workflows/actions-demo.yml
@@ -18,3 +18,16 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Run tests with Maven
         run: mvn -B test --file pom.xml
+
+  merge_pull_request:
+    runs-on: ubuntu-latest
+    needs: run_tests
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+      - name: Set up Git
+        run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
+      - name: Merge pull request
+        uses: pullreminders/merge-action@v0.14.0
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
