--- a/.github/workflows/actions-demo.yml
+++ b/.github/workflows/actions-demo.yml
@@ -1,5 +1,9 @@
 name: tests
-on: push
+on:
+  push:
+    branches:
+      - master
+
 jobs:
   run_tests:
     runs-on: ubuntu-latest
@@ -26,8 +30,8 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v2
       - name: Set up Git
-        run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
-      - name: Merge pull request
-        uses: pullreminders/merge-action@v0.14.0
+        run: git config --global user.email "2022120067@github.com" && git config --global user.name "2022120067"
+      - name: PR Merge
+        uses: actions-cool/pr-merge@v0.0.1-beat
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
